fix: replace markdownlint action with working version
- Replace actionshub/markdownlint@v4 with avto-dev/markdown-lint-action@v1
- Previous action was unavailable, causing workflow failures

--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Markdown Lint
-        uses: actionshub/markdownlint@v4
+        uses: avto-dev/markdown-lint-action@v1
         with:
           config: '.markdownlint.json'
           files: '**/*.md'
